# taxi_predictor

./: README.md  pyproject.toml
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
notebooks/: load_raw_data.ipynb
