[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["shankarganesh.d <shankarganesh.d@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
requests = "^2.31.0"
pyarrow = "^12.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
